# rudi-suite-template

./: .gitignore  LICENSE  README.md  _config.yml  alias.pl  install.sh  overview.md  run  singularity.def
apps/: README.md  suite_config.toml
apps/demo_app/: Cargo.toml  app_config.toml
apps/demo_app/src/: demo_plot.rs  demo_table.rs
apps/dioxus/: Cargo.toml  README.md  suite_config.toml
apps/dioxus/demo_app/: Cargo.toml  app_config.toml  app_overview.md
apps/dioxus/demo_app/src/: README.md  data_tables.rs  demo_plot.rs  demo_table.rs  inputs.rs  layout.rs  lib.rs  plot.rs  table.rs
apps/dioxus/demo_app/src/data_plots/: mod.rs
apps/dioxus/demo_app/src/data_tables/: mod.rs
apps/dioxus/demo_app/src/page_layout/: instructions.md  mod.rs
apps/dioxus/demo_app/src/user_inputs/: instructions.md  mod.rs
apps/dioxus/shared/server/: Cargo.toml  build.rs  debug.sh
apps/dioxus/shared/server/src/: main.rs
apps/dioxus/shared/server/src/components/: mod.rs
apps/shared/: README.md
apps/shared/server/: Cargo.toml  build.rs
apps/shared/server/src/: main.rs
docs/: README.md  containers.md  documentation.md  suite_sharing.md
docs/pipelines/: pipeline_files.md  pipeline_yml.md
logs/: README.md  create_logs.sh
options/: create_options_files.sh
pipelines/: README.md
pipelines/_template/: pipeline-bare.yml  pipeline.yml
pipelines/demo_pipeline/: pipeline.yml  singularity.def
pipelines/shared/: README.md
pipelines/shared/crates/: README.md
pipelines/shared/crates/xxx_tools/: Cargo.toml
pipelines/shared/crates/xxx_tools/src/: main.rs
pipelines/shared/crates/xxx_tools/src/tools/: mod.rs  tool_name.rs
pipelines/shared/environments/: README.md
pipelines/shared/modules/: README.md
pipelines/shared/options/: README.md
templates/: README.md
templates/continuous_integration/: build_suite_apps_container.yml  build_suite_container.yml  compile_rust_with_c.yml
