[package]
name = "demo_app"
version = "0.1.0"
authors = ["Thomas E. Wilson"]
edition = "2021"

[dependencies]

rudi_apps = { path = "../../../../../../frameworks/definitive/rudi-apps-framework/rudi_apps" }
# rudi_apps = { git = "https://github.com/RustyDataInt/rudi-apps-framework" }

# dioxus web app framework
dioxus = { version = "0.7", features = ["fullstack"] }
# dioxus-icons = { version = "0.1.0", default-features = false }
# dioxus-primitives = { git = "https://github.com/DioxusLabs/components", version = "0.0.1", default-features = false, features = ["router"] }

# server-only async data transfer
tokio = { version = "1", features = ["full"], optional = true}

# web-only wasm-javascript bindings
wasm-bindgen = { version = "0.2", optional = true }
wasm-bindgen-futures = { version = "0.4", optional = true }

# image processing
# base64 = "0.22"
# image = { version = "0.25", default-features = false, features = ["png"] } 

# data transport support
# serde = { version = "1", features = ["derive"] }
# serde_json = "1"
# server_fn = "0.8"

# debug logging
log = "0.4"

[features]
default = ["web"]
desktop = ["dioxus/desktop"]
web     = ["dioxus/web", "dep:wasm-bindgen", "dep:wasm-bindgen-futures"]
server  = ["dioxus/server", "dep:tokio"]
