[package]
name = "rudi_apps_server"
authors = ["Thomas E. Wilson"]
edition = "2021"

[dependencies]

#-------------------------------------------------------------
# !!! Add one entry here for each app in your tool suite. !!!
#-------------------------------------------------------------
demo_app = { path = "../../demo_app" }
#-------------------------------------------------------------

#-------------------------------------------------------------
# You should not need to modify any sections below.
# Your library crates will declare their own dependencies.
#-------------------------------------------------------------
dioxus = { version = "0.7", features = ["fullstack"] }
toml = "1.1"

rudi_apps = { path = "../../../../../../../frameworks/definitive/rudi-apps-framework/rudi_apps" }
# rudi_apps = { git = "https://github.com/RustyDataInt/rudi-apps-framework" }

log = "0.4"
dioxus-primitives = { git = "https://github.com/DioxusLabs/components", version = "0.0.1", default-features = false }
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.11"
[target.'cfg(target_arch = "wasm32")'.dependencies]
console_log = "1.0"

[features]
default = ["web"]
desktop = ["dioxus/desktop"]
web     = ["dioxus/web"]
server  = ["dioxus/server"]

[build-dependencies]
rudi_apps = { path = "../../../../../../../frameworks/definitive/rudi-apps-framework/rudi_apps" }
# rudi_apps = { git = "https://github.com/RustyDataInt/rudi-apps-framework" }
