[package]
name = "xxx_tools"
rust-version = "1.92"
edition = "2024"
authors = ["Your Name"]

[dependencies]
rustc-hash  = "2.1"
crossbeam   = "0.8"
rayon       = "1.11"
csv         = "1.4"
flate2      = "1.1"
serde       = { version = "1.0", features = ["derive"] }

rudi     = { git = "https://github.com/RustyDataInt/rudi-pipelines-framework", branch = "main" }
genomex = { git = "https://github.com/wilsontelab/genomex-rudi-tools",         branch = "main" }

# rudi    = { path = "../../../../../../frameworks/developer-forks/rudi-pipelines-framework/crates/rudi" }
# genomex = { path = "../../../../genomex-rudi-tools/shared/crates/genomex" }
